--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,10 +32,9 @@ build_script:
 - if [%tbs_tools%]==[mingw] (
     ECHO '%cd%' &&
     ECHO '*** Building %tbs_tools%\%tbs_arch%' &&
-    ECHO %PATH%
+    ECHO %PATH%  &&
     SET "PATH=C:\mingw\bin;C:\mingw\msys\1.0\bin;%PATH%" &&
-    SET PATH=%PATH:C:\Program Files\Git\usr\bin=%
-    ECHO %PATH%
+    ECHO %PATH% &&
     MKDIR bin &&
     CD bin &&
     cmake .. -G "MinGW Makefiles"&&
