--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,8 @@ build_script:
 - git submodule update --init --recursive
 - ECHO %PATH%
 - if [%tbs_tools%]==[mingw] (
-    SET "PATH=C:\mingw\bin;%PATH%" &&
+    SET "PATH=C:\mingw\bin;C:\mingw\msys\1.0\bin;%PATH%" &&
+    SET PATH=%PATH:C:\Program Files\Git\usr\bin=% &&
     MKDIR bin &&
     CD bin &&
     cmake .. -G "MinGW Makefiles"&&
