--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ build_script:
 - ECHO %PATH%
 - if [%tbs_tools%]==[mingw] (
     SET "PATH=C:\mingw\bin;C:\mingw\msys\1.0\bin;%PATH%" &&
-    SET PATH=%PATH:C:\Program Files\Git\usr\bin=% &&
+    SET "PATH=%PATH:C:\Program Files\Git\usr\bin=%" &&
     MKDIR bin &&
     CD bin &&
     cmake .. -G "MinGW Makefiles"&&
