--- a/src/ConfigurationDefs.props
+++ b/src/ConfigurationDefs.props
@@ -3,7 +3,7 @@
   <ImportGroup Label="PropertySheets" />
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Mixed_COC'">
     <ClCompile>
-      <PreprocessorDefinitions>NDEBUG;COC_EDITION;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;COC_DEBUG;COC_EDITION;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Release_COC'">
