test fix appveyor. Part 17

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,12 +28,13 @@ install:
      invoke '7z' 'x -oC:\ mw64.7z';
     }
 build_script:
-- git submodule update --init --recursive
+- C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\mingw32-make --version
 - C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\g++ --version
 - ECHO %PATH%
+- git submodule update --init --recursive
 - if [%tbs_tools%]==[mingw] (
-    SET "PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin;%PATH%" &&
     SET "PATH=%PATH:C:\Program Files\Git\usr\bin=%" &&
+    SET "PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin;%PATH%" &&
     MKDIR bin &&
     CD bin &&
     cmake .. -G "MinGW Makefiles"&&
