test fix appveyor. Part 19

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,12 +30,19 @@ install:
 build_script:
 - C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\mingw32-make --version
 - C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\g++ --version
-- ECHO %PATH%
+#- ECHO %PATH%
 - git submodule update --init --recursive
 - if [%tbs_tools%]==[mingw] (
     - SET "PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin;%PATH%"
+
+# Remove sh.exe from the path otherwise CMake will complain:
+# "sh.exe was found in your PATH, here: C:/Program Files/Git/usr/bin/sh.exe"
+# and the MinGW build will not work (the Visual Studio build does not care).
     - SET "PATH=%PATH:C:\Program Files\Git\usr\bin=%"
-    - ECHO %PATH%
+  )
+
+  - ECHO %PATH%
+  if [%tbs_tools%]==[mingw] (
     - MKDIR bin
     - CD bin
     - cmake .. -G "MinGW Makefiles"
