--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,16 +33,15 @@ build_script:
 # and the MinGW build will not work (the Visual Studio build does not care).
 
 - if [%tbs_tools%]==[mingw] (
-    - SET "PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin;%PATH%"
-    - SET "PATH=%PATH:C:\Program Files\Git\usr\bin=%"
+    SET "PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin;%PATH%" &&
+    SET "PATH=%PATH:C:\Program Files\Git\usr\bin=%"
   )
-
-  - ECHO %PATH%
-  if [%tbs_tools%]==[mingw] (
-    - MKDIR bin
-    - CD bin
-    - cmake .. -G "MinGW Makefiles"
-    - mingw32-make
+- ECHO %PATH%
+- if [%tbs_tools%]==[mingw] (
+    MKDIR bin &&
+    CD bin &&
+    cmake .. -G "MinGW Makefiles" &&
+    mingw32-make
   )
 - if [%tbs_tools%]==[msvcDISABLE] (
     ECHO '%cd%' &&
