--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,7 +40,7 @@ build_script:
 - if [%tbs_tools%]==[mingw] (
     MKDIR bin &&
     CD bin &&
-     CC=gcc CXX=g++ cmake .. -DCMAKE_MAKE_PROGRAM=mingw32-make -G "MinGW Makefiles" &&
+    cmake .. -DCMAKE_MAKE_PROGRAM=mingw32-make -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++ -G "MinGW Makefiles" &&
     mingw32-make
   )
 - if [%tbs_tools%]==[msvcDISABLE] (
