Add lua installation .cmd for appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,10 @@ environment:
   - tbs_arch: x64
     tbs_tools: msvc
     tbs_config: Release
+install:
+- SET LUAENV=lua51
+- cmd: .appveyor\install-lua.cmd
+
 build_script:
 - C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\mingw32-make --version
 - C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\g++ --version
