--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # exclude all dot files except .git and travis files
 .*
 !.git*
+!.appveyor*
 !.travis.yml
 
 # exclude binaries and temporary files
