--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,8 +7,8 @@ image:
 - Previous Visual Studio 2017
 configuration:
 - Debug
-- Release
 - Mixed
+- Release
 platform:
 - x64
 - x86
@@ -22,25 +22,25 @@ after_build:
 - cmd: xrbuild.cmd
 test: off
 artifacts:
-- path: res/xdOpenXRay.Dx86.7z
-  name: xdOpenXRay.Dx86.7z
-- path: res/xdOpenXRay.Dx64.7z
-  name: xdOpenXRay.Dx64.7z
-- path: res/xdOpenXRay.Mx86.7z
-  name: xdOpenXRay.Mx86.7z
-- path: res/xdOpenXRay.Mx64.7z
-  name: xdOpenXRay.Mx64.7z
-- path: res/xdOpenXRay.Rx86.7z
-  name: xdOpenXRay.Rx86.7z
-- path: res/xdOpenXRay.Rx64.7z
-  name: xdOpenXRay.Rx64.7z
+- path: res/OpenXRay.Dx86.7z
+  name: OpenXRay.Dx86.7z
+- path: res/OpenXRay.Dx64.7z
+  name: OpenXRay.Dx64.7z
+- path: res/OpenXRay.Mx86.7z
+  name: OpenXRay.Mx86.7z
+- path: res/OpenXRay.Mx64.7z
+  name: OpenXRay.Mx64.7z
+- path: res/OpenXRay.Rx86.7z
+  name: OpenXRay.Rx86.7z
+- path: res/OpenXRay.Rx64.7z
+  name: OpenXRay.Rx64.7z
 deploy:
 - provider: GitHub
-  tag: xd$(appveyor_build_version)
-  release: xdOpenXRay (build $(appveyor_build_version))
+  tag: $(appveyor_build_version)
+  release: OpenXRay (build $(appveyor_build_version))
   description: $(APPVEYOR_REPO_COMMIT_MESSAGE)
   auth_token:
-    secure: UAusA7Nky/sPD8phs1KqV7T0FipjuVgYIioj41JnPjYAX7HMPGe293sdXYM0qjPd
-  artifact: xdOpenXRay.Dx86.7z, xdOpenXRay.Dx64.7z, xdOpenXRay.Mx86.7z, xdOpenXRay.Mx64.7z, xdOpenXRay.Rx86.7z, xdOpenXRay.Rx64.7z
+    secure: insert_token_here
+  artifact: OpenXRay.Dx86.7z, OpenXRay.Dx64.7z, OpenXRay.Mx86.7z, OpenXRay.Mx64.7z, OpenXRay.Rx86.7z, OpenXRay.Rx64.7z
   draft: true
   force_update: true
