Revert using luabind.cmake. Use luajit for luabind. Part 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive --std=c++17")
 
 add_definitions(-D_MT -D_CPPUNWIND -DPURE_DYNAMIC_CAST -DDECLARE_SPECIALIZATION -DM_NOSTDCONTAINERS_EXT -DUSE_OGL)
 
-find_package(Lua51 REQUIRED)
+set(LUA_INCLUDE_DIR Externals/luajit/src)
+set(LUA_LIBRARIES luajit)
+set(LUA_FOUND 1)
 if (NOT WIN32)
 find_package(OpenSSL REQUIRED)
 find_package(Theora REQUIRED)
