add xrbuild.cmd to msvc building. Part 6

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,13 +47,12 @@ build_script:
     mingw32-make
   )
 - if [%tbs_tools%]==[msvc] (
-    msbuild "src\engine.sln" /m /verbosity:minimal /property:PlatformToolset=v141 /t:Clean,Build /p:Platform=%tbs_arch% /p:Configuration=%tbs_config% /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" &&
-    xrbuild.cmd
+    msbuild "src\engine.sln" /m /verbosity:minimal /property:PlatformToolset=v141 /t:Clean,Build /p:Platform=%tbs_arch% /p:Configuration=%tbs_config% /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   )
 
 #create artifacts
-#after_build:
-#- if [%tbs_tools%]==[msvc] xrbuild.cmd
+after_build:
+- xrbuild.cmd
 
 test: off
 artifacts:
