AppVeyor: Changed default engine folder to bin
New build package script

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ build:
   parallel: true
   verbosity: minimal
 after_build:
-- cmd: xrbuild.cmd
+- cmd: xr_pack_build.cmd
 test: off
 artifacts:
 - path: res/OpenXRay.Dx86.7z
