add configuration and platform like in upstream, but build_script is still peculiar

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,50 +3,42 @@ pull_requests:
   do_not_increment_build_number: true
 skip_tags: true
 image: Visual Studio 2017
+configuration:
+- Debug
+- Mixed
+- Release
+platform:
+- x64
+- x86
 environment:
   matrix:
-  - PLATFORM: x86
-    BUILD_SYSTEM: mingw
-#  - PLATFORM: x64
-#    BUILD_SYSTEM: mingw
-  - PLATFORM: x86
-    BUILD_SYSTEM: msvc
-    CONFIGURATION: Debug
-  - PLATFORM: x86
-    BUILD_SYSTEM: msvc
-    CONFIGURATION: Release
-  - PLATFORM: x64
-    BUILD_SYSTEM: msvc
-    CONFIGURATION: Debug
-  - PLATFORM: x64
-    BUILD_SYSTEM: msvc
-    CONFIGURATION: Release
-install:
+  - BUILDSYSTEM: MinGW
+  - BUILDSYSTEM: MSVC
+#install:
 #- SET LUAENV=lua51
 #- cmd: .appveyor\install-lua.cmd
 
 build_script:
-- C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\mingw32-make --version
-- C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\g++ --version
 - git submodule update --init --recursive
 
 # Remove sh.exe from the path otherwise CMake will complain:
 # "sh.exe was found in your PATH, here: C:/Program Files/Git/usr/bin/sh.exe"
 # and the MinGW build will not work (the Visual Studio build does not care).
-- SET "PATH=%PATH:C:\Program Files\Git\usr\bin=%"
+- if [%BUILDSYSTEM%]==[MinGW] SET "PATH=%PATH:C:\Program Files\Git\usr\bin=%"
 
-# Add mingw-w64 to PATH
-- if [%BUILD_SYSTEM%]==[mingw] (
-    SET "PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin;%PATH%"
-  )
+# Add MinGW-w64 to PATH
+- if [%BUILDSYSTEM%]==[MinGW] SET "PATH=C:\MinGW-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\MinGW64\bin;%PATH%"
+
 - ECHO %PATH%
-- if [%BUILD_SYSTEM%]==[mingw] (
+- if [%BUILDSYSTEM%]==[MinGW] && [%PLATFORM%] = [x86] && [%CONFIGURATION%] = [Debug] (
+    MinGW32-make --version &&
+    g++ --version &&
     MKDIR bin &&
     CD bin &&
     cmake .. -G "MinGW Makefiles" &&
-    mingw32-make
+    MinGW32-make
   )
-- if [%BUILD_SYSTEM%]==[msvc] (
+- if [%BUILDSYSTEM%]==[MSVC] (
     msbuild "src\engine.sln" /m /verbosity:minimal /property:PlatformToolset=v141 /t:Clean,Build /p:Platform=%PLATFORM% /p:Configuration=%CONFIGURATION% /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   )
 
@@ -60,6 +52,10 @@ artifacts:
   name: OpenXRay.Dx86.7z
 - path: res/OpenXRay.Dx64.7z
   name: OpenXRay.Dx64.7z
+- path: res/OpenXRay.Mx86.7z
+  name: OpenXRay.Mx86.7z
+- path: res/OpenXRay.Mx64.7z
+  name: OpenXRay.Mx64.7z
 - path: res/OpenXRay.Rx86.7z
   name: OpenXRay.Rx86.7z
 - path: res/OpenXRay.Rx64.7z
