--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install: export CXX="g++-7"
 os:
 - linux
 before_script:
+  - g++ --version
   - sudo apt-get install libegl1-mesa-dev libgles2-mesa-dev
   - sudo apt-get install cmake lua5.1-dev libssl-dev libogg-dev libtheora-dev libvorbis-dev libsdl2-dev liblzo2-dev libjpeg-dev libncurses5-dev
   - mkdir bin
