--- a/Externals/SPIRV.vcxproj
+++ b/Externals/SPIRV.vcxproj
@@ -95,21 +95,17 @@
     <ClInclude Include="glslang\SPIRV\SPVRemapper.h" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="glslang.vcxproj">
+      <Project>{8559bc92-bc07-32ef-beed-0c50fe6ca3c3}</Project>
+    </ProjectReference>
     <ProjectReference Include="HLSL.vcxproj">
-      <Project>63CEEE7D-2A82-3FDB-AF79-23F77BB29AC1</Project>
-      <Name>HLSL</Name>
+      <Project>{63ceee7d-2a82-3fdb-af79-23f77bb29ac1}</Project>
     </ProjectReference>
     <ProjectReference Include="OGLCompiler.vcxproj">
-      <Project>D4C49E20-DE3E-36FE-8BFA-0517A87FDB47</Project>
-      <Name>OGLCompiler</Name>
+      <Project>{d4c49e20-de3e-36fe-8bfa-0517a87fdb47}</Project>
     </ProjectReference>
     <ProjectReference Include="OSDependent.vcxproj">
-      <Project>0165B392-9E93-3AA3-89F3-20ACB545095D</Project>
-      <Name>OSDependent</Name>
-    </ProjectReference>
-    <ProjectReference Include="glslang.vcxproj">
-      <Project>8559BC92-BC07-32EF-BEED-0C50FE6CA3C3</Project>
-      <Name>glslang</Name>
+      <Project>{0165b392-9e93-3aa3-89f3-20acb545095d}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
