--- a/Externals/glslang.vcxproj
+++ b/Externals/glslang.vcxproj
@@ -72,6 +72,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="glslang\glslang\MachineIndependent\attribute.cpp" />
     <ClCompile Include="glslang\glslang\MachineIndependent\Constant.cpp" />
     <ClCompile Include="glslang\glslang\MachineIndependent\glslang_tab.cpp" />
     <ClCompile Include="glslang\glslang\MachineIndependent\InfoSink.cpp" />
@@ -98,6 +99,7 @@
     <ClCompile Include="glslang\glslang\MachineIndependent\ShaderLang.cpp" />
     <ClCompile Include="glslang\glslang\MachineIndependent\SymbolTable.cpp" />
     <ClCompile Include="glslang\glslang\MachineIndependent\Versions.cpp" />
+    <ClInclude Include="glslang\glslang\MachineIndependent\attribute.h" />
     <ClInclude Include="glslang\glslang\MachineIndependent\glslang_tab.cpp.h" />
     <ClInclude Include="glslang\glslang\MachineIndependent\gl_types.h" />
     <ClInclude Include="glslang\glslang\MachineIndependent\Initialize.h" />
@@ -132,21 +134,18 @@
     <ClCompile Include="glslang\glslang\GenericCodeGen\Link.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="HLSL.vcxproj">
-      <Project>63CEEE7D-2A82-3FDB-AF79-23F77BB29AC1</Project>
-      <Name>HLSL</Name>
-    </ProjectReference>
-    <ProjectReference Include="OGLCompiler.vcxproj">
-      <Project>D4C49E20-DE3E-36FE-8BFA-0517A87FDB47</Project>
-      <Name>OGLCompiler</Name>
-    </ProjectReference>
-    <ProjectReference Include="OSDependent.vcxproj">
-      <Project>0165B392-9E93-3AA3-89F3-20ACB545095D</Project>
-      <Name>OSDependent</Name>
-    </ProjectReference>
+    <None Include="glslang\glslang\MachineIndependent\glslang.y" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="glslang\glslang\MachineIndependent\glslang.y" />
+    <ProjectReference Include="HLSL.vcxproj">
+      <Project>{63ceee7d-2a82-3fdb-af79-23f77bb29ac1}</Project>
+    </ProjectReference>
+    <ProjectReference Include="OGLCompiler.vcxproj">
+      <Project>{d4c49e20-de3e-36fe-8bfa-0517a87fdb47}</Project>
+    </ProjectReference>
+    <ProjectReference Include="OSDependent.vcxproj">
+      <Project>{0165b392-9e93-3aa3-89f3-20acb545095d}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
