Update CMakeLists and some code for building on Linux

--- a/src/xrCore/CMakeLists.txt
+++ b/src/xrCore/CMakeLists.txt
@@ -1,5 +1,3 @@
-cmake_minimum_required(VERSION 3.5)
-
 add_dir (
 	"."
 	"Animation"
@@ -16,10 +14,9 @@ add_dir (
 
 message( "path "  ${CMAKE_CURRENT_SOURCE_DIR} ) 
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include)
+
 add_library(xrCore SHARED ${XRCORE__SOURCES} ${XRCORE__INCLUDES})
 
-find_library(SDL2_LIB SDL2)
-find_library(LZO_LIBRARY lzo2)
-find_library(CRYPTO_LIBRARY crypto++)
-find_library(PUGIXML_LIBRARY pugixml)
+set_target_properties(xrCore PROPERTIES PREFIX "")
 target_link_libraries(xrCore ${SDL2_LIB} ${OPENSSL_LIBRARIES} ${LZO_LIBRARY} ${CRYPTO_LIBRARY} ${PUGIXML_LIBRARY})
