xrAPI: added to CMake linux build

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 #add_subdirectory(utils)
-#add_subdirectory(Layers)
+add_subdirectory(Layers)
 #add_subdirectory(xrMisc)
 #add_subdirectory(xrAICore)
 #add_subdirectory(xrCDB)
