--- a/Externals/CMakeLists.txt
+++ b/Externals/CMakeLists.txt
@@ -3,5 +3,6 @@ add_subdirectory(luabind)
 add_subdirectory(lzo)
 add_subdirectory(cximage)
 add_subdirectory(NVTT)
+add_subdirectory(OPCODE)
 #add_subdirectory(gli)
 #add_subdirectory(glew)
