--- a/src/xrCore/CMakeLists.txt
+++ b/src/xrCore/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_dir (
+project(xrCore)
+
+list(APPEND DIRS
 	"."
 	"Animation"
 	"Compression"
@@ -10,13 +12,13 @@ add_dir (
 	"Text"
 	"Threading"
 	"XML"
-        xrCore)
+	)
 
-message( "path "  ${CMAKE_CURRENT_SOURCE_DIR} ) 
+add_dir("${DIRS}")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/../../sdk/include)
 
-add_library(xrCore SHARED ${XRCORE__SOURCES} ${XRCORE__INCLUDES})
+add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
 
-set_target_properties(xrCore PROPERTIES PREFIX "")
-target_link_libraries(xrCore ${SDL2_LIB} ${OPENSSL_LIBRARIES} ${LZO_LIBRARY} ${CRYPTO_LIBRARY} ${PUGIXML_LIBRARY})
+set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
+target_link_libraries(${PROJECT_NAME} ${SDL2_LIB} ${OPENSSL_LIBRARIES} ${LZO_LIBRARY} ${CRYPTO_LIBRARY} ${PUGIXML_LIBRARY})
