--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,5 +9,5 @@ add_subdirectory(xrCore)
 #add_subdirectory(xrNetServer)
 #add_subdirectory(xrParticles)
 #add_subdirectory(xrPhysics)
-#add_subdirectory(xrScriptEngine)
+add_subdirectory(xrScriptEngine)
 #add_subdirectory(xrSound)
