--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,4 +10,4 @@ add_subdirectory(xrCore)
 #add_subdirectory(xrParticles)
 #add_subdirectory(xrPhysics)
 add_subdirectory(xrScriptEngine)
-#add_subdirectory(xrSound)
+add_subdirectory(xrSound)
