--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
   - cd bin
   - cmake ..
 script:
-- if [ $TRAVIS_OS_NAME == linux ]; then make; fi
+- if [ $TRAVIS_OS_NAME == linux ]; then make && file src/xrCore/xrCore.so; fi
 addons:
   apt:
     sources:
