--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "Externals/LuaJIT"]
+	path = Externals/LuaJIT
+	url = https://github.com/q4a/LuaJIT.git
 [submodule "Externals/luabind"]
 	path = Externals/luabind
 	url = https://github.com/q4a/luabind-deboostified.git
