--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,6 @@ add_subdirectory(xrCore)
 #add_subdirectory(xrGame)
 #add_subdirectory(xrNetServer)
 #add_subdirectory(xrParticles)
-#add_subdirectory(xrPhysics)
+add_subdirectory(xrPhysics)
 add_subdirectory(xrScriptEngine)
 add_subdirectory(xrSound)
