--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ add_subdirectory(xrCore)
 #add_subdirectory(xrEngine)
 #add_subdirectory(xrGame)
 #add_subdirectory(xrNetServer)
-#add_subdirectory(xrParticles)
+add_subdirectory(xrParticles)
 add_subdirectory(xrPhysics)
 add_subdirectory(xrScriptEngine)
 add_subdirectory(xrSound)
