--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "Externals/LuaJIT"]
 	path = Externals/LuaJIT
-	url = https://github.com/Xottab-DUTY/LuaJIT.git
+	url = https://github.com/q4a/LuaJIT.git
 [submodule "Externals/luabind"]
 	path = Externals/luabind
-	url = https://github.com/Xottab-DUTY/luabind-deboostified.git
+	url = https://github.com/q4a/luabind-deboostified.git
 [submodule "Externals/GameSpy"]
 	path = Externals/GameSpy
 	url = https://github.com/nitrocaster/GameSpy.git
