~ Added debug configuration to appveyor ~ Moved v_ssss and v2p_ssss to ogse_config.h + Added define R2_SHADERS_BACKWARDS_compaTIBILITY. Allows to use old shader compiler. = Fixed r3. = Fixed bug with save/load * Replaced exported is_* functions with cast_* functions. More compatibility with original CoC.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,10 +5,11 @@ skip_tags: true
 image:
 - Visual Studio 2017
 configuration:
-- Mixed
+- Release_COC
 - Release
 - Mixed_COC
-- Release_COC
+- Mixed
+- Debug
 platform:
 - x64
 - x86
@@ -22,6 +23,10 @@ after_build:
 - cmd: xrbuild.cmd
 test: off
 artifacts:
+- path: res/OpenXRay.Dx86.7z
+  name: OpenXRay.Dx86.7z
+- path: res/OpenXRay.Dx64.7z
+  name: OpenXRay.Dx64.7z
 - path: res/OpenXRay.Mx86.7z
   name: OpenXRay.Mx86.7z
 - path: res/OpenXRay.Mx64.7z
