--- a/src/xrSound/CMakeLists.txt
+++ b/src/xrSound/CMakeLists.txt
@@ -24,5 +24,5 @@ add_definitions(-DXRSOUND_EXPORTS -DdSINGLE -D_SECURE_SCL=0)
 add_library(${PROJECT_NAME} SHARED ${${PROJECT_NAME}__SOURCES} ${${PROJECT_NAME}__INCLUDES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
-#target_link_libraries(${PROJECT_NAME} xrCore ogg vorbis vorbisfile openal xrAPI xrCDB)
+#target_link_libraries(${PROJECT_NAME} xrCore ${OGG_LIBRARIES} vorbis vorbisfile openal xrAPI xrCDB)
 target_link_libraries(${PROJECT_NAME} xrCore xrAPI xrCDB)
