Loading screen is now in XML, finally!
Removed dxApplicationRender and cleaned up CApplication
Moved rs_loadingstages from xrRender to xrEngine

--- a/src/xrEngine/xrEngine.vcxproj
+++ b/src/xrEngine/xrEngine.vcxproj
@@ -322,6 +322,7 @@
     <ClInclude Include="IGame_ObjectPool.h" />
     <ClInclude Include="IGame_Persistent.h" />
     <ClInclude Include="IInputReceiver.h" />
+    <ClInclude Include="ILoadingScreen.h" />
     <ClInclude Include="IObjectPhysicsCollision.h" />
     <ClInclude Include="IPerformanceAlert.hpp" />
     <ClInclude Include="IPHdebug.h" />
