--- a/src/xrGame/xrGame.vcxproj.filters
+++ b/src/xrGame/xrGame.vcxproj.filters
@@ -2305,6 +2305,9 @@
     <Filter Include="ScriptClasses\ScriptMap">
       <UniqueIdentifier>{e1570b96-3a99-41b6-961e-e897402b732c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UI\Common\LoadingScreen">
+      <UniqueIdentifier>{d9b405a9-3bb7-4739-bfc6-60b1a7c278cc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mt_config.h">
@@ -6663,6 +6666,9 @@
       <Filter>Core\Client\Objects\actor\base</Filter>
     </ClInclude>
     <ClInclude Include="Flashlight.h" />
+    <ClInclude Include="ui\UILoadingScreen.h">
+      <Filter>UI\Common\LoadingScreen</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ActorNightVision.cpp">
@@ -9698,6 +9704,9 @@
       <Filter>Core\Client\Objects\inventory\InventoryOwner</Filter>
     </ClCompile>
     <ClCompile Include="Flashlight.cpp" />
+    <ClCompile Include="ui\UILoadingScreen.cpp">
+      <Filter>UI\Common\LoadingScreen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ai\monsters\chimera\chimera_attack_state.h">
