--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ add_subdirectory(utils)
 add_subdirectory(Layers)
 #add_subdirectory(xr_3da)
 #add_subdirectory(xrMisc)
-#add_subdirectory(xrAICore)
+add_subdirectory(xrAICore)
 add_subdirectory(xrCDB)
 add_subdirectory(xrCore)
 #add_subdirectory(xrEngine)
